--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "build": "nuxt build && electron-builder"
   },
   "dependencies": {
-    "nuxt": "^1.4.0"
+    "@mapbox/mapbox-gl-draw": "^1.0.9",
+    "mapbox-gl": "^0.50.0",
+    "nuxt": "^1.4.0",
+    "vue-pouch-db": "^2.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
