settings pane update with geocoding

--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.0.9",
+    "@mapquest/directions": "^0.3.3",
+    "@mapquest/geocoding": "0.0.4",
+    "@turf/turf": "^5.1.6",
+    "axios": "^0.18.0",
+    "bgr-apis": "0.0.1",
+    "elan-api": "0.0.3",
+    "ktbl-apis": "0.0.1",
+    "lodash": "^4.17.11",
     "mapbox-gl": "^0.50.0",
     "nuxt": "^1.4.0",
     "pouchdb-browser": "^7.0.0",
