--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@mapquest/directions": "^0.3.3",
     "@mapquest/geocoding": "0.0.4",
     "@turf/turf": "^5.1.6",
+    "async": "^2.6.1",
     "axios": "^0.18.0",
-    "bgr-apis": "0.0.1",
-    "elan-api": "0.0.3",
-    "ktbl-apis": "0.0.1",
+    "bgr-apis": "^0.0.1",
+    "elan-api": "^0.0.3",
+    "ktbl-apis": "^1.0.0",
     "lodash": "^4.17.11",
     "mapbox-gl": "^0.50.0",
     "nuxt": "^1.4.0",
