--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bufferutil": "^4.0.0",
     "lodash": "^4.17.11",
     "mapbox-gl": "^0.50.0",
+    "nano": "^7.1.0",
     "nuxt": "^1.4.0",
     "pouchdb": "^7.0.0",
     "pouchdb-browser": "^7.0.0",
