--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "axios": "^0.18.0",
     "bgr-apis": "^0.0.1",
     "bufferutil": "^4.0.0",
+    "chart.js": "^2.7.3",
+    "chartjs-plugin-dragdata": "^0.1.0",
     "lodash": "^4.17.11",
     "mapbox-gl": "^0.50.0",
+    "mini-toastr": "^0.8.1",
     "nano": "^7.1.0",
     "nuxt": "^1.4.0",
     "pouchdb": "^7.0.0",
@@ -36,6 +39,7 @@
     "pouchdb-find": "^7.0.0",
     "pouchdb-live-find": "^0.4.0",
     "utf-8-validate": "^5.0.1",
+    "vue-notifications": "^0.9.0",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
