--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bufferutil": "^4.0.0",
     "chart.js": "^2.7.3",
     "chartjs-plugin-dragdata": "^0.1.0",
+    "fruchtfolge-model": "^1.0.0",
     "lodash": "^4.17.11",
     "mapbox-gl": "^0.50.0",
     "mini-toastr": "^0.8.1",
